# openglbasics

./: CMakeLists.txt  README.md
cmake/: thirdparty.cmake
include/: main.h
src/: main.cpp  triangle.cpp
